# django-backblaze-b2

./: .dockerignore  .flake8  .gitignore  .python-version  .python-versions  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
django_backblaze_b2/: __init__.py  _decorators.py  b2_file.py  b2_filemeta_shim.py  cache_account_info.py  options.py  storage.py  storages.py  urls.py  views.py
sample_app/b2_file_app/: admin.py  apps.py  models.py  views.py
sample_app/b2_file_app/management/commands/: createuser.py
sample_app/b2_file_app/migrations/: .gitignore
sample_app/b2_file_app/templates/: index.html
sample_app/sample_app/: .gitignore  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_b2_storage_class.py  test_backblaze_b2_storage.py  test_cache_account_info.py  test_django_backblaze_b2.py  test_storages_classes.py
tests/test_project/: manage.py
tests/test_project/django_project/: settings.py  urls.py  wsgi.py
tests/test_project/files/: apps.py  models.py  urls.py  views.py
tests/test_project/files/migrations/: 0001_initial.py
tests/test_project/files/templates/: index.html
