[metadata]
name = django-backblaze-b2
version = 1.0
description = A Django app to use backblaze b2 as storage.
long_description = file: README.rst
url = https://github.com/ehossack/django-backblaze-b2/
author = Étienne Hossack
author_email = django_backblaze_b2@internet-e-mail.com
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    django, storage, backblaze, b2, cloud


[options]
include_package_data = true
packages = find:
install_requires =
    b2sdk
    django
python_requires=
    >=3.6
